# python-autogen2

./: 01_models.py  02_messages.py  03_agents.py  04_teams.py  05_human_in_the_loop.py  06_termination.py  Makefile  pyproject.toml  team_state.json
07_managing_state/: 01_saving_and_loading_agents.py  02_saving_and_loading_teams.py
08_custom_agents/: 01_countdown_agent.py  02_arithmetic_agent.py
09_selector_group_chat/: 01_web_search.py  02_using_reasoning_models.py
10_swarm/: 01_customer_support.py  02_stock_market_research.py
11_magentic_one/: 01_getting_started.py  02_team.py
12_memory_and_rag/: 01_list_memory.py  02_custom_memory_stores.py  03_rag_agent.py
